add header class name

--- a/lab 5 ii.html
+++ b/lab 5 ii.html
@@ -91,7 +91,7 @@
         </div>
         <div class="footer-section yoga">
             <img src="https://www.dropbox.com/s/to75p3a22j5suzc/announcement.png?raw=1"/>
-            <h1>RESULTS</h1>
+            <h1 class="header">RESULTS</h1>
             <p>Duis aute irure dolor in<br>
                 reprehenderit in voluptate<br>
                 velit esse cillum dolore eu<br>
